--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
 @proxym:registry=https://repos.proxym-group.net/repository/npm-private/
+//repos.proxym-group.net/repository/npm-private/:_authToken=NpmToken.b3aa1369-6725-3c37-bfed-af74e72ba45d
