eslint fixs minor changes bump version

--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -10,12 +10,13 @@
     "storybook": "start-storybook",
     "components": "start-storybook",
     "build-storybook": "build-storybook",
-    "lint": "eslint --ext '.js,.ts,.tsx' .",
+    "lint": "eslint . --ext .js,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
     "test": "jest --watch --coverage=false",
     "test:coverage": "jest --verbose --coverage --passWithNoTests",
     "test:ci": "jest --coverage=false --passWithNoTests",
     "prepare": "bob build",
+    "prettier:write": "yarn prettier --write **/*.{js,jsx,ts,tsx,json}",
     "typescript": "tsc --noEmit",
     "build:ci": "yarn && yarn typescript"
   },
