--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ pages:
     script:
       - yarn install
       - yarn bootstrap # added bootstrap step
+      - export NODE_ENV=production # set NODE_ENV to production
       - yarn build-storybook
       - mv libs/components/storybook-static ./public
     artifacts:
