--- a/libs/themes/tsconfig.json
+++ b/libs/themes/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../tsconfig.libs.json"
+  "extends": "../tsconfig.libs.json",
+  "compilerOptions": {
+    "outDir": "lib",
+    "rootDir": "src",
+    "baseUrl": "./"
+  },
+  "include": ["src/**/*"]
 }
