--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -46,6 +46,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.7",
     "react-native-builder-bob": "^0.18.2",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-svg": "^13.6.0",
     "react-native-web": "0.17.7",
@@ -59,6 +60,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-native": "^0.69.7",
+    "react-native-reanimated": "*",
     "react-native-web": "^0.18.10"
   },
   "react-native": "src/index.ts",
