--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,32 @@
 image: gitlab-registry.proxym-group.net/docker/node:16.17.0
 
+sonarqube-check:
+  tags:
+    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
+  allow_failure: true
+  only:
+    variables:
+      - $CI_COMMIT_BRANCH == "master"
+      - $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"
+      - $CI_MERGE_REQUEST_EVENT_TYPE == "merge_request"
+      - $CI_PIPELINE_SOURCE == "merge_request_event"
+    changes:
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+
 pages:
   stage: deploy
   tags:
