--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ sonarqube-check:
   tags:
     - docker
   image:
-    name: sonarsource/sonar-scanner-cli:latest
+    name: gitlab-registry.proxym-group.net/docker/sonar-scanner:latest
     entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
