--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,13 @@
-image: gitlab-registry.proxym-group.net/docker/node:16.17.0
+stages:
+  - Code_Review
+  - deploy
 
 sonarqube-check:
+  stage: Code_Review
   tags:
     - docker
   image:
-    name: sonarsource/sonar-scanner-cli:4.8
+    name: gitlab-registry.proxym-group.net/docker/sonar-scanner:4.8
     entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
@@ -16,6 +19,18 @@ sonarqube-check:
   script:
     - sonar-scanner
   allow_failure: true
+  only:
+    refs:
+      - merge_requests
+
+test_CI:
+  stage: Code_Review
+  tags:
+    - docker
+  script:
+    - yarn install
+    - yarn lint
+    - yarn test:ci
 
 pages:
   stage: deploy
