--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,10 @@
-stages:
-  - Code_Review
-  - deploy
+image: gitlab-registry.proxym-group.net/docker/node:16.17.0
 
 sonarqube-check:
-  stage: Code_Review
   tags:
     - docker
   image:
-    name: gitlab-registry.proxym-group.net/docker/sonar-scanner:4.8
+    name: sonarsource/sonar-scanner-cli:4.8
     entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
@@ -17,20 +14,8 @@ sonarqube-check:
     paths:
       - .sonar/cache
   script:
-    - sonar-scanner
+    - sonar-scanner -Dsonar.host.url="$SONAR_URL"
   allow_failure: true
-  only:
-    refs:
-      - merge_requests
-
-test_CI:
-  stage: Code_Review
-  tags:
-    - docker
-  script:
-    - yarn install
-    - yarn lint
-    - yarn test:ci
 
 pages:
   stage: deploy
