--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ sonarqube-check:
   tags:
     - docker
   image:
-    name: sonarsource/sonar-scanner-cli:4.8
+    name: gitlab-registry.proxym-group.net/docker/sonar-scanner:4.8
     entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
