--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ sonarqube-check:
     - sonar-scanner -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
   allow_failure: true
   only:
-    changes:
+    refs:
       - master
-      - develop
+
 
 test_CI:
   stage: Code_Review
@@ -37,6 +37,8 @@ test_CI:
   only:
     refs:
       - merge_requests
+    variables:
+      - $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
 
 pages:
   stage: deploy
@@ -52,7 +54,8 @@ pages:
     paths:
       - public
   only:
-    changes:
+    refs:
       - master
-      - libs/components/src/**/*.stories.tsx
+    changes:
+      - "libs/components/src/**/*.stories.tsx"
   when: manual
