--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.tsx",
   "repository": "https://gitlab.proxym-group.net/ghassen-mellassi/react-native-starter/proxym-rn-design-system.git",
   "publishConfig": {
-    "@proxym:registry": "https://repos.proxym-group.net/repository/npm-private/"
+    "@proxym:registry": "https://gitlab.proxym-group.net/api/v4/react-native-starter/proxym-rn-design-system/packages/npm/"
   },
   "scripts": {
     "storybook": "start-storybook",
