--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@proxym:registry=https://repos.proxym-group.net/repository/npm-private/
-//repos.proxym-group.net/repository/npm-private/:_authToken=NpmToken.b3aa1369-6725-3c37-bfed-af74e72ba45d
+@proxym:registry=https://gitlab.proxym-group.net/api/v4/react-native-starter/proxym-rn-design-system/packages/npm/
+//gitlab.proxym-group.net/api/v4/react-native-starter/proxym-rn-design-system/packages/npm/:_authToken=glpat-q5pRCZdsYuGf4yVQtcVU
