--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "libs/*"
   ],
-  "version": "0.0.12",
+  "version": "0.0.13-test.0",
   "license": "SEE LICENSE IN LICENSE FILE",
   "command": {
     "publish": {
