--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -29,6 +29,8 @@
     "@proxym/eslint-config": "^0.0.6",
     "@proxym/prettier-config": "^0.0.6",
     "@proxym/themes": "^0.0.12",
+    "@react-navigation/material-top-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.4",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addons": "^6.5.16",
     "@storybook/react": "^6.5.16",
@@ -47,8 +49,10 @@
     "react-native": "0.69.7",
     "react-native-builder-bob": "^0.18.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "^6.1.4",
     "react-native-reanimated": "^2.13.0",
     "react-native-svg": "^13.6.0",
+    "react-native-tab-view": "^3.5.0",
     "react-native-web": "0.17.7",
     "react-test-renderer": "^18.2.0",
     "storybook-addon-mock": "^1.7.0",
