--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -29,6 +29,7 @@
     "@proxym/eslint-config": "^0.0.6",
     "@proxym/prettier-config": "^0.0.6",
     "@proxym/themes": "^0.0.12",
+    "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/material-top-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
     "@storybook/addon-essentials": "^6.5.16",
@@ -51,6 +52,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "^6.1.4",
     "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-svg": "^13.6.0",
     "react-native-tab-view": "^3.5.0",
     "react-native-web": "0.17.7",
