Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,14 @@ image: gitlab-registry.proxym-group.net/docker/node:16.17.0
 stages:
   - Prepare
   - Code_Review
-  - deploy
+  - Deploy
 
 prepare_cache:
   stage: Prepare
   tags:
     - docker
   script:
-    - echo "Checking if yarn.lock has changed in the past day..."
-    - if test `find ./yarn.lock -mtime +0` && test ! `find ./yarn.lock -mtime -1`; then echo "yarn.lock file has not changed in the past day. Caching node_modules..."; yarn install --frozen-lockfile; fi
+    - yarn install --frozen-lockfile
   cache:
     key: "${CI_COMMIT_REF_SLUG}-node-modules"
     paths:
@@ -58,7 +57,7 @@ test_CI:
     - prepare_cache
 
 pages:
-  stage: deploy
+  stage: Deploy
   tags:
     - docker
   script:
