--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,9 @@ test_CI:
       - $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
   dependencies:
     - prepare_cache
+  needs:
+    - job: prepare_cache
+      artifacts: true
 
 pages:
   stage: Deploy
@@ -84,4 +87,3 @@ pages:
   needs:
     - job: prepare_cache
       artifacts: true
-  when: manual
