--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,12 +29,9 @@ sonarqube-check:
     key: "${CI_JOB_NAME}"
     paths:
       - .sonar/cache
-      - node_modules
   script:
     - sonar-scanner -Dsonar.host.url="$SONAR_HOST_URL" -Dsonar.login="$SONAR_TOKEN"
   allow_failure: true
-  needs:
-    - job: prepare_cache
   only:
     refs:
       - master
@@ -46,6 +43,10 @@ test_CI:
   script:
     - yarn lint
     - yarn test:ci
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-node-modules"
+    paths:
+      - node_modules
   only:
     refs:
       - merge_requests
@@ -61,6 +62,10 @@ pages:
     - export NODE_ENV=production
     - yarn build-storybook
     - mv libs/components/storybook-static ./public
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-node-modules"
+    paths:
+      - node_modules
   artifacts:
     paths:
       - public
