--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -62,11 +62,12 @@
   },
   "peerDependencies": {
     "@proxym/themes": "^0.0.13",
+    "@react-native-community/blur": "^4.3.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.0",
-    "react-native-reanimated": "*",
+    "react-native-reanimated": "^2.13.0",
     "react-native-web": "^0.18.10"
   },
   "react-native": "src/index.ts",
